File Reader fertig gestellt